// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders catalog 1`] = `
<div
  className="HeaderCatalog-root-28"
>
  <div
    className="HeaderCatalog-streamUserBlock-29"
  >
    <p
      className="HeaderCatalog-streamUserHello-30"
    >
      Hello, Ben A 
      <br />
      <a
        className="HeaderCatalog-streamUserVerification-31"
        href="/"
        onClick={[Function]}
      >
        KYC VERIFICATION
      </a>
    </p>
    <div
      className="HeaderCatalog-streamUserPhoto-32"
    >
      <img
        alt=""
        src="user.jpg"
      />
    </div>
  </div>
</div>
`;

exports[`renders game 1`] = `
<div
  className="HeaderGame-root-18"
>
  <div
    className="HeaderGame-gameUserBlock-19"
  >
    <p
      className="HeaderGame-gameUserHello-20"
    >
      Hello, Ben A 
      <br />
      <a
        className="HeaderGame-gameUserVerification-21"
        href="/"
        onClick={[Function]}
      >
        KYC VERIFICATED
      </a>
    </p>
    <div
      className="HeaderGame-gameUserPhoto-22"
    >
      <img
        alt=""
        src="user.jpg"
      />
    </div>
  </div>
</div>
`;

exports[`renders games 1`] = `
<div
  className="HeaderGames-root-23"
>
  <div
    className="HeaderGames-gamesUserBlock-24"
  >
    <p
      className="HeaderGames-gamesUserHello-25"
    >
       Hello, Ben A 
      <br />
      <a
        className="HeaderGames-gamesUserVerification-26"
        href="/"
        onClick={[Function]}
      >
        KYC VERIFICATED
      </a>
    </p>
    <div
      className="HeaderGames-gamesUserPhoto-27"
    >
      <img
        alt=""
        src="user.jpg"
      />
    </div>
  </div>
  <div>
    Test
  </div>
</div>
`;

exports[`renders main 1`] = `
<header
  className="HeaderMain-root-1"
>
  <div
    className="UserBlock-root-2"
  >
    <div
      className="UserBlock-user-3"
    >
      <div
        className="UserBlock-userBlock-4"
      >
        <p
          className="UserBlock-userHello-5"
        >
          Hello, anonymous 
          <br />
          <a
            className="UserBlock-userVerification-6"
            href="/"
            onClick={[Function]}
          >
            KYC VERIFICATED
          </a>
        </p>
        <div
          className="UserBlock-userPhoto-7"
        >
          <img
            alt=""
            src="user.jpg"
          />
        </div>
      </div>
    </div>
  </div>
</header>
`;
